# tcpserver

./: readme
src/: CMakeLists.txt  config.c  main.c
src/helper/: cmd_parser.c  epollfn.c  http_parser.c  test_function.c  uriparser.c  utils.c
src/helper/header/: cmd_parser.h  epollfn.h  http_parser.h  test_function.h  uriparser.h  utils.h
src/server/: daemon.c  daemon.h  server.c  server.h
src/server/handler/: http_err.c  main_handler_recv.c
src/server/handler/header/: http_err.h  main_handler_recv.h
tests/: p  t_bincomp.c  t_detached_pthread.c  t_epoll_notify.c  t_gotojmp.c  t_http_parser.c  t_http_parser.h  t_http_parser_main.c  t_invalid_pointer.c  t_print.c  t_pthread_twice_bug.c  t_read.c  t_setjmp.c  t_strings_test.c  t_time.c  t_utils.c  t_utils.h
tests/uriparser/: main.c  uriparser.c  uriparser.h
